Fix new/old color palette contrast

--- a/assets/src/sass/helpers/mixins/_mixins-links.scss
+++ b/assets/src/sass/helpers/mixins/_mixins-links.scss
@@ -109,7 +109,8 @@
 		color: #233566;
 	}
 
-	&:is( .has-background:not(.has-link-color) a ):not( .blog-post a ) {
+	&:is( .has-background:not(.has-link-color) a ):not( .blog-post a ):not(.wp-block-button__link),
+	&:is( .has-text-color:not(.has-link-color) a ) {
 		color: inherit;
 		outline-color: currentColor;
 
